--- a/notebooks/data_ingestion.ipynb
+++ b/notebooks/data_ingestion.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
        "'d:\\\\vscode\\\\nyc_building_energy_efficiency_ratings\\\\nyc_energy_rating'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,12 +119,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
+    "import pandas as pd\n",
     "import urllib.request as request\n",
+    "import requests\n",
     "import zipfile\n",
     "from src.logger import logger\n",
     "from src.utils.common import get_size"
@@ -132,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +155,8 @@
     "            logger.info(f\"File already exists of size: {get_size(Path(self.config.local_data_file))}\")  \n",
     "\n",
     "        \n",
-    "    \n",
+    "\n",
+    "     \n",
     "    def extract_zip_file(self):\n",
     "        \"\"\"\n",
     "        zip_file_path: str\n",
@@ -162,60 +165,50 @@
     "        \"\"\"\n",
     "        unzip_path = self.config.unzip_dir\n",
     "        os.makedirs(unzip_path, exist_ok=True)\n",
-    "        with zipfile.ZipFile(self.config.local_data_file, 'r') as zip_ref:\n",
-    "            zip_ref.extractall(unzip_path)"
+    "        try:\n",
+    "            with zipfile.ZipFile(self.config.local_data_file, 'r') as zip_ref:\n",
+    "                zip_ref.extractall(unzip_path)\n",
+    "        except zipfile.BadZipFile as e:\n",
+    "            print(f\"BadZipFile Error:{e}\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "    def read_data(self):\n",
+    "\n",
+    "        df = pd.read_csv(self.config.local_data_file)\n",
+    "        print(df.head(5))\n",
+    "        print(df.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-03-09 16:20:29,548: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2024-03-09 16:20:29,553: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-03-09 16:20:29,555: INFO: common: created directory at: artifacts]\n",
-      "[2024-03-09 16:20:29,558: INFO: common: created directory at: artifacts/data_ingestion]\n",
-      "[2024-03-09 16:20:31,223: INFO: 1682586375: artifacts/data_ingestion/data.zip download! with following info: \n",
-      "Server: GitHub.com\n",
-      "Date: Sat, 09 Mar 2024 10:50:31 GMT\n",
-      "Content-Type: text/html; charset=utf-8\n",
-      "Vary: X-PJAX, X-PJAX-Container, Turbo-Visit, Turbo-Frame, Accept-Encoding, Accept, X-Requested-With\n",
-      "ETag: W/\"1af5532c61b424eee249091ef25de74b\"\n",
-      "Cache-Control: max-age=0, private, must-revalidate\n",
-      "Strict-Transport-Security: max-age=31536000; includeSubdomains; preload\n",
-      "X-Frame-Options: deny\n",
-      "X-Content-Type-Options: nosniff\n",
-      "X-XSS-Protection: 0\n",
-      "Referrer-Policy: no-referrer-when-downgrade\n",
-      "Content-Security-Policy: default-src 'none'; base-uri 'self'; child-src github.com/assets-cdn/worker/ gist.github.com/assets-cdn/worker/; connect-src 'self' uploads.github.com www.githubstatus.com collector.github.com raw.githubusercontent.com api.github.com github-cloud.s3.amazonaws.com github-production-repository-file-5c1aeb.s3.amazonaws.com github-production-upload-manifest-file-7fdce7.s3.amazonaws.com github-production-user-asset-6210df.s3.amazonaws.com api.githubcopilot.com objects-origin.githubusercontent.com *.actions.githubusercontent.com wss://*.actions.githubusercontent.com productionresultssa0.blob.core.windows.net/ productionresultssa1.blob.core.windows.net/ productionresultssa2.blob.core.windows.net/ productionresultssa3.blob.core.windows.net/ productionresultssa4.blob.core.windows.net/ productionresultssa5.blob.core.windows.net/ productionresultssa6.blob.core.windows.net/ productionresultssa7.blob.core.windows.net/ productionresultssa8.blob.core.windows.net/ productionresultssa9.blob.core.windows.net/ productionresultssa10.blob.core.windows.net/ productionresultssa11.blob.core.windows.net/ productionresultssa12.blob.core.windows.net/ productionresultssa13.blob.core.windows.net/ productionresultssa14.blob.core.windows.net/ productionresultssa15.blob.core.windows.net/ productionresultssa16.blob.core.windows.net/ productionresultssa17.blob.core.windows.net/ productionresultssa18.blob.core.windows.net/ productionresultssa19.blob.core.windows.net/ github-production-repository-image-32fea6.s3.amazonaws.com github-production-release-asset-2e65be.s3.amazonaws.com insights.github.com wss://alive.github.com; font-src github.githubassets.com; form-action 'self' github.com gist.github.com objects-origin.githubusercontent.com; frame-ancestors 'none'; frame-src viewscreen.githubusercontent.com notebooks.githubusercontent.com; img-src 'self' data: github.githubassets.com media.githubusercontent.com camo.githubusercontent.com identicons.github.com avatars.githubusercontent.com github-cloud.s3.amazonaws.com objects.githubusercontent.com secured-user-images.githubusercontent.com/ user-images.githubusercontent.com/ private-user-images.githubusercontent.com opengraph.githubassets.com github-production-user-asset-6210df.s3.amazonaws.com customer-stories-feed.github.com spotlights-feed.github.com objects-origin.githubusercontent.com *.githubusercontent.com; manifest-src 'self'; media-src github.com user-images.githubusercontent.com/ secured-user-images.githubusercontent.com/ private-user-images.githubusercontent.com github-production-user-asset-6210df.s3.amazonaws.com gist.github.com; script-src github.githubassets.com; style-src 'unsafe-inline' github.githubassets.com; upgrade-insecure-requests; worker-src github.com/assets-cdn/worker/ gist.github.com/assets-cdn/worker/\n",
-      "Set-Cookie: _gh_sess=vs2OHqcWWe9FET7cECjyb0uxko6c7Wl6%2FWTSCazH02rQOL0CJHw5QEO85d2Y140JMGNJ6RlpxkpLFc5vzSSmJkIDzt10AlEu%2B%2FCopfupOjsta1%2FoH4iWyV%2Fv8RMpSDm0gzf1DWmyCuJZSEFYtakSkqzZWDc7V03%2Ff5AfUUWwD%2BLApntfDgxetAvsu8th0qV4AjyqieYI94iXtZfBsP8QiCgW1LLaM%2BLCK%2B6fE8NwTIgCQJpB53hj%2Fa54g%2BwbZ7lPUBFzyAEGFrUAK2%2Fkqqo%2B8w%3D%3D--IfBk4BURgQBPYCIK--lBUQl2mN434SWE5rR000yg%3D%3D; Path=/; HttpOnly; Secure; SameSite=Lax\n",
-      "Set-Cookie: _octo=GH1.1.1187387424.1709981431; Path=/; Domain=github.com; Expires=Sun, 09 Mar 2025 09:50:31 GMT; Secure; SameSite=Lax\n",
-      "Set-Cookie: logged_in=no; Path=/; Domain=github.com; Expires=Sun, 09 Mar 2025 09:50:31 GMT; HttpOnly; Secure; SameSite=Lax\n",
-      "Accept-Ranges: bytes\n",
-      "Transfer-Encoding: chunked\n",
-      "X-GitHub-Request-Id: E559:163C8F:DB3D84:F6D6C3:65EC3EF7\n",
-      "connection: close\n",
+      "[2024-03-09 18:39:58,136: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-03-09 18:39:58,143: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-03-09 18:39:58,145: INFO: common: created directory at: artifacts]\n",
+      "[2024-03-09 18:39:58,147: INFO: common: created directory at: artifacts/data_ingestion]\n",
+      "[2024-03-09 18:39:58,150: INFO: 3980016563: File already exists of size: ~ 4 KB]\n",
+      "BadZipFile Error:File is not a zip file\n",
+      "   10_Digit_BBL  Street_Number     Street_Name  DOF_Gross_Square_Footage  \\\n",
+      "0    1007610020            325  WEST 37 STREET                     48843   \n",
+      "1    1007610022            313  WEST 37 STREET                     82354   \n",
+      "2    1007610028            307  WEST 37 STREET                    102824   \n",
+      "3    1007610033            545        8 AVENUE                    166874   \n",
+      "4    1007610037            555        8 AVENUE                    162260   \n",
       "\n",
-      "]\n"
-     ]
-    },
-    {
-     "ename": "BadZipFile",
-     "evalue": "File is not a zip file",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mBadZipFile\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[20], line 8\u001b[0m\n\u001b[0;32m      6\u001b[0m     data_ingestion\u001b[38;5;241m.\u001b[39mextract_zip_file()\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m----> 8\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\n",
-      "Cell \u001b[1;32mIn[20], line 6\u001b[0m\n\u001b[0;32m      4\u001b[0m     data_ingestion \u001b[38;5;241m=\u001b[39m DataIngestion(config\u001b[38;5;241m=\u001b[39mdata_ingestion_config)\n\u001b[0;32m      5\u001b[0m     data_ingestion\u001b[38;5;241m.\u001b[39mdownload_file()\n\u001b[1;32m----> 6\u001b[0m     \u001b[43mdata_ingestion\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mextract_zip_file\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m      8\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\n",
-      "Cell \u001b[1;32mIn[19], line 27\u001b[0m, in \u001b[0;36mDataIngestion.extract_zip_file\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     25\u001b[0m unzip_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig\u001b[38;5;241m.\u001b[39munzip_dir\n\u001b[0;32m     26\u001b[0m os\u001b[38;5;241m.\u001b[39mmakedirs(unzip_path, exist_ok\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m---> 27\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[43mzipfile\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mZipFile\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconfig\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlocal_data_file\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m zip_ref:\n\u001b[0;32m     28\u001b[0m     zip_ref\u001b[38;5;241m.\u001b[39mextractall(unzip_path)\n",
-      "File \u001b[1;32mc:\\Users\\aakas\\anaconda3\\envs\\sega\\lib\\zipfile.py:1266\u001b[0m, in \u001b[0;36mZipFile.__init__\u001b[1;34m(self, file, mode, compression, allowZip64, compresslevel, strict_timestamps)\u001b[0m\n\u001b[0;32m   1264\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m   1265\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m mode \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m-> 1266\u001b[0m         \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_RealGetContents\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1267\u001b[0m     \u001b[38;5;28;01melif\u001b[39;00m mode \u001b[38;5;129;01min\u001b[39;00m (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mx\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[0;32m   1268\u001b[0m         \u001b[38;5;66;03m# set the modified flag so central directory gets written\u001b[39;00m\n\u001b[0;32m   1269\u001b[0m         \u001b[38;5;66;03m# even if no files are added to the archive\u001b[39;00m\n\u001b[0;32m   1270\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_didModify \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\aakas\\anaconda3\\envs\\sega\\lib\\zipfile.py:1333\u001b[0m, in \u001b[0;36mZipFile._RealGetContents\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1331\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m BadZipFile(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFile is not a zip file\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m   1332\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m endrec:\n\u001b[1;32m-> 1333\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m BadZipFile(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFile is not a zip file\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m   1334\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdebug \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m   1335\u001b[0m     \u001b[38;5;28mprint\u001b[39m(endrec)\n",
-      "\u001b[1;31mBadZipFile\u001b[0m: File is not a zip file"
+      "  Energy_Efficiency_Grade  Energy_Star_1-100_Score  \n",
+      "0                       A                      100  \n",
+      "1                       C                       62  \n",
+      "2                       B                       79  \n",
+      "3                       A                       86  \n",
+      "4                       A                      100  \n",
+      "(100, 6)\n"
      ]
     }
    ],
@@ -226,9 +219,24 @@
     "    data_ingestion = DataIngestion(config=data_ingestion_config)\n",
     "    data_ingestion.download_file()\n",
     "    data_ingestion.extract_zip_file()\n",
+    "    data_ingestion.read_data()\n",
     "except Exception as e:\n",
     "    raise e"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
